2008-04-11  Andreas Kupries  <andreask@activestate.com>

	* library/pkgIndex.tcl: Bumped version of starkit to 1.3.2. We
	* library/starkit.tcl: should have done that when we synchronized
	* pkgIndex.tcl.in: the mismatched version on 2005-11-09 anyway,
	because it was a bugfix, with attendant change to the version
	number. Without this bump we now have 1.3.1 floating around in two
	variants, i.e. it may or may not be mismatched with its package
	index, and the two variants cannot be distinguished. By bumping
	the patchlevel the correct version would have been easy to
	distinguish. Now it will.

2008-04-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* configure:    If building static then do not define USE_TCL_STUBS
	* configure.in: (needed to link tclkit with 8.6)

2008-03-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* http2.6/http.tcl, http2.6/pkgIndex.tcl: merge with tcl cvs 2.7
	http changes, change this version to 2.6.8.

2008-03-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* http2.6/http.n, http2.6/http.tcl, http2.6/pkgIndex.tcl: merge
	with tcl cvs 2.5.5 http changes, correct whitespace differences,
	require Tcl 8.4.

2008-03-04  Steve Huntley  <stephen.huntley@alum.mit.edu>

	vfs::template package update ver. 1.5.2:

	* templatevfs.tcl, deltavfs.tcl, versionvfs.tcl, quotavfs.tcl, fishvfs.tcl:
	  added workaround to memchan bug that shows up when tclkit used.
	* pkgIndex.tcl, tclIndex: moved auto_index edits from former to latter
	  to conform to Tcl package management standard practice.

2008-02-26  Steve Huntley  <stephen.huntley@alum.mit.edu>

	vfs::template package update ver. 1.5.1:

	* deltavfs.tcl, versionvfs.tcl, quotavfs.tcl: minor bug
	  fixes and reformatting.

2008-02-15  Steve Huntley  <stephen.huntley@alum.mit.edu>

	vfs::template package update ver. 1.5:

	* Better formatting as Tcl package (added template/pkgIndex.tcl)
	* Added chrootvfs.tcl
	* Code refactored for simplicity and better performance
	* Added improved globfind package