@@ -1,0 +1,6 @@
+# Compatibility package to keep the ability to use vfs::zip via
+# zipvfs. Keep the version number in sync with version of vfs::zip,
+# and pkgIndex.tcl, of course. There is no other functionality, only
+# the redirection.
+package require vfs::zip 1.0.1
+package provide zipvfs   1.0.1
